# llm-exploration

./: .gitignore  Dockerfile  README.md  gemma-2-fine-tuning-malayalam.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: gemma-2b-malayalam.ipynb  pruning.ipynb  quantization.ipynb
